--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -4,7 +4,7 @@ linkTitle = "Axway-Open-Docs"
 
 +++
 
-{{< blocks/cover title="Documentation for Amplify Platform" image_anchor="top" height="full" color="primary" >}}
+{{< blocks/cover title="Documentation for Amplify Platform Management" image_anchor="top" height="full" color="primary" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
@@ -21,7 +21,7 @@ linkTitle = "Axway-Open-Docs"
 
 
 {{% blocks/lead %}}
-This website makes it easy for you to contribute directly to the user documentation for Amplify Platform. 
+This website makes it easy for you to contribute directly to the user documentation for Amplify Platform Management. 
 
 Help us to improve the documentation!
 
@@ -30,7 +30,7 @@ Help us to improve the documentation!
 
 {{< blocks/section >}}
 <div class="col-12">
-<h1 class="text-center">Amplify Platform</h1>
+<h1 class="text-center">Amplify Platform Management</h1>
 </div>
 {{< /blocks/section >}}
 
